--- a/index.html
+++ b/index.html
@@ -88,31 +88,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
-            <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+            <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">numbchux</div>
-                <div class="card-title">EA82 to Ej22 Swap Guide</div>
-                <div class="card-description">Swap guide from Ultimatesubaru</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="2" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
-            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Rear e-Brake Retrofit </div>
+                <div class="card-id">generic build</div>
+                <div class="card-author">FozRoamer</div>
+                <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="3" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="2" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
             <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -124,7 +112,31 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+            <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">numbchux</div>
+                <div class="card-title">EA82 to Ej22 Swap Guide</div>
+                <div class="card-description">Swap guide from Ultimatesubaru</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="4" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Rear e-Brake Retrofit </div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="5" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
             <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -136,7 +148,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="5" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="6" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ej22</div>
@@ -148,7 +160,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="7" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
             <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -160,7 +172,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="7" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="8" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -172,7 +184,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="8" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="" data-title="Ignition Module Testing">
             <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -184,7 +196,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="9" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -196,7 +208,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/weldedDiff.jpeg');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/weldedDiff.jpeg');" class="item h2 w4" data-id="11" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
             <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -208,7 +220,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
             <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -220,7 +232,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="12" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
             <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -232,7 +244,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="13" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="14" data-category="ea82" data-description="" data-title="Weber Conversion">
             <a href="./detail-page/weber-conversion.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
