--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <title>Lifted Subarus</title>
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
+  <!--  Facebook -->
+  <meta property="og:title"        content="Lifted Subarus " />
+  <meta property="og:description"  content="Curated Offroad Subaru Build Guides. " />
+
+
 </head>
 
 <body>
@@ -91,7 +96,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Rob Park</div>
+                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
+                <div class="card-title">Tube Bending 101</div>
+                <div class="card-description">pirate4x4 tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -105,7 +124,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -113,20 +132,6 @@
                 <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
                 <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Rob Park</div>
-                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
-                <div class="card-title">Tube Bending 101</div>
-                <div class="card-description">pirate4x4 tech</div>
                 </a>
                 </div>
               </div>
@@ -147,21 +152,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
-
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
-                <div class="card-title">Dashboard Removal</div>
-                <div class="card-description">&amp; LED retrofitting</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -169,6 +160,20 @@
                 <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
                 <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
+                <div class="card-title">Dashboard Removal</div>
+                <div class="card-description">&amp; LED retrofitting</div>
                 </a>
                 </div>
               </div>
@@ -346,7 +351,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. LiftedSubarus does not warrant the performance, effectiveness or applicability of any sites listed or linked to in any Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
-    <p style="font-size:.5em;color:#bdc3c7">v1-08.11.18-20.41</p>
+    <p style="font-size:.5em;color:#bdc3c7">v1-08.11.18-28.45</p>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
