--- a/detail-page/cars101-com.html
+++ b/detail-page/cars101-com.html
@@ -25,8 +25,10 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title"        content="  Cars101.com " />
-  <meta property="og:description"  content="  Subaru research and information website " />
+  <meta property="og:title" content="  Cars101.com " />
+  <meta property="og:description" content="  Subaru research and information website " />
+
+    <meta property="og:image" content="/subaru-history.jpg" />
 
 
 </head>
@@ -75,7 +77,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-13.37</p>
+      <p >v1-08.12.18-19.17</p>
     </a>
   </footer>
 
