--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
                 <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
@@ -100,7 +100,7 @@
           <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="1" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
 
               <div class="card">
-                <div class="card-id">Crosstrek</div>
+                <!--<div class="card-id">Crosstrek</div> -->
                 <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
                 <div class="card-title">Bumper Cutting</div>
                 <div class="card-description"></div>
@@ -113,7 +113,7 @@
           <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
                 <div class="card-title">Safe Recovery Technique</div>
                 <div class="card-description"></div>
@@ -126,7 +126,7 @@
           <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
                 <div class="card-title">Tube Bending 101</div>
                 <div class="card-description">pirate4x4 tech</div>
@@ -139,7 +139,7 @@
           <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
                 <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
@@ -152,7 +152,7 @@
           <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/cars101-com.html"> <div class="item-content">
                 <div class="card-title">Cars101.com</div>
                 <div class="card-description">Subaru research and information website</div>
@@ -165,7 +165,7 @@
           <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="6" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
                 <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
@@ -178,7 +178,7 @@
           <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
                 <div class="card-title">EA82 to Ej22 Swap Guide</div>
                 <div class="card-description">Swap guide from Ultimatesubaru</div>
@@ -191,7 +191,7 @@
           <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="8" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
                 <div class="card-title">Dashboard Removal</div>
                 <div class="card-description">&amp; LED retrofitting</div>
@@ -204,7 +204,7 @@
           <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
                 <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
@@ -217,7 +217,7 @@
           <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
                 <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
@@ -230,7 +230,7 @@
           <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="11" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
-                <div class="card-id">ej22</div>
+                <!--<div class="card-id">ej22</div> -->
                 <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
@@ -243,7 +243,7 @@
           <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="12" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
                 <div class="card-title">Fuel Injector Cleaning</div>
                 <div class="card-description">scrub a dub dub</div>
@@ -256,7 +256,7 @@
           <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY Head Porting">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
                 <div class="card-title">DIY Head Porting</div>
                 <div class="card-description"></div>
@@ -269,7 +269,7 @@
           <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
                 <div class="card-title">Ignition Module Testing</div>
                 <div class="card-description"></div>
@@ -282,7 +282,7 @@
           <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="15" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
@@ -292,23 +292,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="16" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="16" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
-                <div class="card-id">generic build</div>
-                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-                <div class="card-title">DIY: Welded Differential</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="17" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-
-              <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
                 <div class="card-title">Cooler Thermoswitch</div>
                 <div class="card-description">Get your electric fan to switch on at a lower temp</div>
@@ -318,10 +305,23 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="17" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+
+              <div class="card">
+                <!--<div class="card-id">generic build</div> -->
+                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="18" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
                 <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
                 <div class="card-description"></div>
@@ -334,7 +334,7 @@
           <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="19" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
-                <div class="card-id">generic build</div>
+                <!--<div class="card-id">generic build</div> -->
                 <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
                 <div class="card-title">Chopsaw Tube Notching</div>
                 <div class="card-description">BillaVista Offroad Tech</div>
@@ -347,7 +347,7 @@
           <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="20" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
-                <div class="card-id">ea82</div>
+                <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/weber-conversion.html"> <div class="item-content">
                 <div class="card-title">Weber Conversion</div>
                 <div class="card-description"></div>
@@ -372,7 +372,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-36.43</p>
+      <p >v1-08.12.18-38.56</p>
     </a>
   </footer>
 
